test: LottoTest 추가 및 로또 번호 생성 및 유효성 검증 테스트 구현