@@ -1,25 +1,39 @@
 package lotto;
 
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.DisplayName;
 
+import java.util.Arrays;
 import java.util.List;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 class LottoTest {
+
     @Test
-    void 로또_번호의_개수가_6개가_넘어가면_예외가_발생한다() {
-        assertThatThrownBy(() -> new Lotto(List.of(1, 2, 3, 4, 5, 6, 7)))
-                .isInstanceOf(IllegalArgumentException.class);
+    @DisplayName("로또 번호가 6개가 아니면 예외가 발생한다.")
+    void createLottoWithInvalidNumberCount() {
+        List<Integer> invalidNumbers = Arrays.asList(1, 2, 3, 4, 5);
+        assertThatThrownBy(() -> new Lotto(invalidNumbers))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("[ERROR] 로또 번호는 6개여야 합니다.");
     }
 
-    @DisplayName("로또 번호에 중복된 숫자가 있으면 예외가 발생한다.")
     @Test
-    void 로또_번호에_중복된_숫자가_있으면_예외가_발생한다() {
-        assertThatThrownBy(() -> new Lotto(List.of(1, 2, 3, 4, 5, 5)))
-                .isInstanceOf(IllegalArgumentException.class);
+    @DisplayName("로또 번호가 1부터 45 사이가 아니면 예외가 발생한다.")
+    void createLottoWithInvalidNumberRange() {
+        List<Integer> invalidNumbers = Arrays.asList(0, 2, 3, 4, 5, 6);
+        assertThatThrownBy(() -> new Lotto(invalidNumbers))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("[ERROR] 로또 번호는 1부터 45 사이의 숫자여야 합니다.");
     }
 
-    // TODO: 추가 기능 구현에 따른 테스트 코드 작성
+    @Test
+    @DisplayName("로또 번호는 오름차순으로 정렬된다.")
+    void createLottoWithSortedNumbers() {
+        List<Integer> numbers = Arrays.asList(45, 1, 33, 12, 20, 7);
+        Lotto lotto = new Lotto(numbers);
+        assertThat(lotto.getNumbers()).containsExactly(1, 7, 12, 20, 33, 45);
+    }
 }
